added link + styling

--- a/filmfinder.html
+++ b/filmfinder.html
@@ -30,15 +30,15 @@
                     <li class="side-item">
                         
                         <label class="side-radio-label" for="new-movies">
-                            <input id="new-movies" checked type="radio" name="side-radio-input" title="New-movies" value="new-movies" class="side-radio-option"/>
+                            <input id="new-movies" type="radio" name="side-radio-input" title="New-movies" value="new-movies" class="side-radio-option"/>
                             New movies
                         </label>
                     </li>
                     <li class="side-item">
                         
                         <label class="side-radio-label" for="avengers">
-                            <input id="avengers" type="radio" name="side-radio-input" title="Avenger" value="hallo" class="side-radio-option"/>
-                            Avenger
+                            <input id="avengers" type="radio" name="side-radio-input" title="Avengers" value="hallo" class="side-radio-option"/>
+                            Avengers
                         </label>
                     </li>
                     <li class="side-item">
