radio btn succes, still working on new btn

--- a/filmfinder.html
+++ b/filmfinder.html
@@ -44,7 +44,7 @@
                     <li class="side-item">
                         
                         <label class="side-radio-label" for="x-men">
-                            <input id="x-men" type="radio" name="side-radio-input" title="X-men" value="hallo" class="side-radio-option"/>
+                            <input id="x-men" type="radio" name="side-radio-input" title="X-Men" value="hallo" class="side-radio-option"/>
                             X-men
                         </label>
                     </li>
