--- a/filmfinder.html
+++ b/filmfinder.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./css/reset.css" rel="stylesheet">
         <link href="./css/style.css" rel="stylesheet">
+        <script defer src="./script/filmdatabase.js" type="text/javascript"></script>
         <script defer src="./script/filmfinder.js" type="text/javascript"></script>
     </head>
     <body>
