--- a/filmfinder.html
+++ b/filmfinder.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./css/reset.css" rel="stylesheet">
         <link href="./css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script defer src="./script/filmdatabase.js" type="text/javascript"></script>
         <script defer src="./script/filmfinder.js" type="text/javascript"></script>
     </head>
@@ -26,8 +27,8 @@
         <div id="body-container" class="main-container">
 
             <aside id="side-menu">
-            <form id="side-form-filter">
-                <ul id="side-list" class="side-lijst">
+                <form id="side-form-filter" action="">
+                    <ul id="side-list" class="side-lijst">
                     <li class="side-item">
                         
                         <label class="side-radio-label" for="new-movies">
@@ -63,8 +64,16 @@
                             Batman
                         </label>
                     </li>
-                </ul>
-            </form>
+                    </ul>
+
+                    <div class="search-container">
+                        <label for="searchbalk" class="side-input-label"></label>
+                        <input type="text" placeholder="search by title" value="" name="search-movie" id="searchbalk" title="searchbalk" class="side-input-search">
+                        <button type="submit" id="search-btn">
+                            <span class="material-symbols-outlined search-btn-icon">search</span>
+                        </button>
+                    </div>
+                </form>
             </aside>
 
             <div id="content">
