--- a/filmfinder.html
+++ b/filmfinder.html
@@ -27,7 +27,7 @@
         <div id="body-container" class="main-container">
 
             <aside id="side-menu">
-                <form id="side-form-filter" action="">
+                <form id="side-form-filter">
                     <ul id="side-list" class="side-lijst">
                     <li class="side-item">
                         
