--- a/callbacks.html
+++ b/callbacks.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./css/reset.css" rel="stylesheet">
-        <link href="./css/style.css" rel="stylesheet">
+        <link href="./css/callbacks.css" rel="stylesheet">
+        <script defer src="./script/callbacks.js" type="text/javascript"></script>
     </head>
     <body>
         <header id="header">
@@ -21,6 +22,5 @@
                 <li class="navigatie-item">Contact</li>
             </ul>
         </nav>
-        <script defer src="./debug101.js"></script>
     </body>
 </html>
