--- a/filmfinder.html
+++ b/filmfinder.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./css/reset.css" rel="stylesheet">
-        <link href="./css/style.css" rel="stylesheet">
+        <link href="./css/filmfinder.css" rel="stylesheet">
+        
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script defer src="./script/filmdatabase.js" type="text/javascript"></script>
         <script defer src="./script/filmfinder.js" type="text/javascript"></script>
